<resources>
    <string name="app_name">JUST JAVA</string>
    <string name="enter_your_name">ENTER YOUR NAME</string>
    <string name="coffee">COFFEE</string>
    <string name="tea">TEA</string>
    <string name="cappuccino">CAPPUCCINO</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="milk">Milk</string>
    <string name="limon">Limon</string>
    <string name="vanilla">Vanilla</string>
    <string name="price">PRICE</string>
    <string name="order">ORDER</string>
    <string name="coffejava">COFFEE :</string>
    <string name="cupjava">  cup  </string>
    <string name="wctjava">Whipped Cream : true</string>
    <string name="wcfjava">Whipped Cream : false</string>
    <string name="choco_tjava">Chocolate : true</string>
    <string name="choco_fjava">Chocolate : false</string>
    <string name="teajava">TEA :</string>
    <string name="milk_tjava">Milk : true</string>
    <string name="milk_fjava">Milk : false</string>
    <string name="limon_tjava">Limon : true</string>
    <string name="limon_fjava">Limon : false</string>
    <string name="cappjava">CAPPUCCINO :</string>
    <string name="vanilla_tjava">Vanilla : true</string>
    <string name="vanilla_fjava">Vanilla : false</string>
    <string name="totaljava">TOTAL= </string>
    <string name="thnxjava">THANK YOU !</string>
    <string name="namejava">NAME :</string>
    <string name="maxcupjava">This is the maximum quantity</string>
    <string name="mincupjava">possible</string>
    <string name="zerototal">Please bought something</string>
    <string name="summary">ORDER SUMMARY</string>

    <string name="title_activity_splashwhats_app">splashwhats_app</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="arabic">arabic</string>
    <string name="english">english</string>
    <string name="chese_your_lang">chese your lang</string>
    <string name="ok">ok</string>
    <string name="back">back</string>
    <string name="languages">languages</string>
    <string name="logout">logout</string>
    <string name="enter_your_email">ENTER YOUR EMAIL</string>
    <string name="enter">ENTER</string>
    <string name="uesrname_or_email">UESRNAME or EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_your_passwoot">forgot your passwoot?</string>
    <string name="login">LOGIN</string>
    <string name="singup">SINGUP</string>
    <string name="uesrname">UESRNAME</string>
    <string name="email">EMAIL</string>
    <string name="passjava">PASSWORD :</string>
    <string name="notuesr">OOOPS ...you not user...please singup</string>
    <string name="wrong">OOOPS ...you wrong</string>
    <string name="hi">hi :</string>
    <string name="logoutjava">Are you sure you are logged out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newmember">you became a member</string>
</resources>
