<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cofcolor"
    android:padding="16dp"
    tools:context=".singup">
    <EditText
    android:id="@+id/usersing"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="16dp"
    android:hint="@string/uesrname"
    android:maxLines="1"
    android:ems="10"
    android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/emailsing"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="@android:color/black" />
    <EditText
        android:id="@+id/passsing"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:ems="10"
        android:textColorHint="@android:color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="36dp"
        android:layout_marginTop="8dp"
        android:background="#FFD28F50"
        android:onClick="singup"
        android:text="@string/singup" />



</LinearLayout>